--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -461,20 +461,20 @@ background-blend-mode: multiply;
   border-radius: 3px;
   padding: 0px 10px 0px 10px;
 }
-.page__content h2{
+.h-entry h2{
   display: block;
-  margin-top: 30px !important;
-  background-color: rgb(212, 255, 241) !important;
-  padding: 10px 20px 10px 20px !important;
-  border: 1px dashed #49b9de !important;
+  margin-top: 30px;
+  background-color: rgb(212, 255, 241);
+  padding: 10px 20px 10px 20px;
+  border: 1px dashed #49b9de;
   border-radius: 5px;
 }
-.page__content h3{
+.h-entry h3{
   display: block;
-  margin-top: 30px !important;
-  background-color: rgb(212, 255, 241) !important;
-  padding: 10px 20px 10px 20px !important;
-  border: 1px dashed #49b9de !important;
+  margin-top: 30px;
+  background-color: rgb(212, 255, 241);
+  padding: 10px 20px 10px 20px;
+  border: 1px dashed #49b9de;
   border-radius: 5px;
 }
 .page__meta .page__taxonomy-item{
@@ -484,10 +484,9 @@ background-blend-mode: multiply;
   padding: 0px 10px 0px 10px; 
 }
 .page__date strong, .dt-published{
-  display: block;
-  margin-top: 30px !important;
-  background-color: rgb(212, 255, 241) !important;
-  padding: 10px 20px 10px 20px !important;
-  border: 1px dashed #49b9de !important;
+  margin-top: 30px;
+  background-color: rgb(212, 255, 241);
+  padding: 10px 20px 10px 20px;
+  border: 1px dashed #49b9de;
   border-radius: 5px;
 }
