--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -997,7 +997,7 @@ background-blend-mode: multiply;
   padding: 0px 10px 0px 10px; 
 }
 .h-entry li::marker{
-  color: #05A069;
+  color: #077d54;
 }
 blockquote{
   margin-top: 30px;
