--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -138,7 +138,7 @@ author_profile: true
   {% comment %}<!-- only show related on a post page when `related: true` -->{% endcomment %}
   {% if page.id and page.related and site.related_posts.size > 0 %}
     <div class="page__related">
-      <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You Mcxzczxcay Also Enjoy" }}</h2>
+      <h2 class="page__related-title">{{ site.data.ui-text[site.locale].related_label | default: "You may Also Enjoy" }}</h2>
       <div class="grid__wrapper">
         {% for post in site.related_posts limit:4 %}
           {% include archive-single.html type="grid" %}
