solve header issue for desktop

--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,4 +1,5 @@
 <style>
+@media screen and (max-width: 760px) {
   .masthead {
     background-color: #fff; /* Add a background color to the masthead if needed */
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Add a box shadow for visual separation */
@@ -24,6 +25,7 @@
     transform: translateY(-100%); /* Move the masthead above the viewport */
 }
 
+}
 </style>
 {% capture logo_path %}{{ site.logo }}{% endcapture %}
 
