correct margin issue

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -592,6 +592,11 @@ font-size: 12px !important;
   }
 }
 @media screen and (max-width: 64em){
+  #main{
+    margin-left: -50px;
+    padding-left: 3em !important;
+    padding-right: 3em !important;
+  }
   .sidebar.sticky{
     margin-left: 4em !important;
   }
@@ -626,7 +631,7 @@ font-size: 20px;
 }
 .page .page__inner-wrap {
   float: left;
-  margin-top: 1em;
+  margin-top: -3em;
   margin-left: 1rem;
   margin-right: 0;
   width: 100%;
@@ -913,9 +918,19 @@ background-blend-mode: multiply;
       opacity: 1 !important;
       margin-left: 4em;
   }
+  #main{
+    margin-left: -50px;
+    padding-left: 3em !important;
+    padding-right: 3em !important;
+  }
   }
 
   @media (min-width: 80em){
+    #main{
+      margin-left: -50px;
+      padding-left: 3em !important;
+      padding-right: 3em !important;
+    }
     .sidebar.sticky {
         overflow-y: auto;
         max-height: calc(100vh - 1em - 2em);
