--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -589,25 +589,29 @@ font-size: 12px !important;
 }
 @media screen and (max-width: 64em){
   .archive{
-    margin: 0px -106px 0px 65px;      
+    margin: 0px 110px 0px 0px;      
   }
 
   #main{
-    margin-left: -50px;
+    margin-left: -73px !important;
     padding-left: 2em !important;
     padding-right: 3em !important;
   }
   .sidebar.sticky{
-    margin-left: 4em !important;
+    margin-left: 2em !important;
   }
   .verified {
-    display: none;
+    display: inline;
+    width: 40px;
 }
 .author__avatar img {
 max-width: 120px !important;
 border-radius: 50%;
 margin-top: 10px;
-margin-left: 0px !important;
+margin-left: 70px !important;
+}
+.author__content{
+  margin-left: 20px;
 }
 .site-title .site-title-span{
 font-size: 20px;
@@ -629,7 +633,7 @@ font-size: 20px;
 .page .page__inner-wrap {
   float: left;
   margin-top: -3em;
-  margin-left: 1rem;
+  margin-left: 4rem;
   margin-right: 0;
   width: 100%;
   clear: both;
@@ -908,9 +912,9 @@ background-blend-mode: multiply;
       margin-left: 4em;
   }
   #main{
-    margin-left: -30px !important;
-    padding-left: 3em !important;
-    padding-right: 3em !important;
+    margin-left: -30px ;
+    padding-left: 3em ;
+    padding-right: 3em ;
   }
   .archive {
     float: right;
@@ -925,6 +929,14 @@ background-blend-mode: multiply;
       padding-left: 3em !important;
       padding-right: 3em !important;
     }
+    .page .page__inner-wrap {
+      float: left;
+      margin-top: -3em;
+      margin-left: 0;
+      margin-right: 0;
+      width: 100%;
+      clear: both;
+  }
     .sidebar.sticky {
         overflow-y: auto;
         max-height: calc(100vh - 1em - 2em);
