--- a/_layouts/custom_about.html
+++ b/_layouts/custom_about.html
@@ -3,9 +3,7 @@ layout: default
 author_profile: true
 ---
 <style>
-   .author__avatar img {
-    border: 2px solid #05A069;
-   }
+
 @media screen and (min-width: 80em) {
   .sidebar {
     width: calc(300px - 1em);
@@ -30,6 +28,34 @@ author_profile: true
 .author__urls-wrapper {
     display: block;
     margin-left: 20px;
+}
+.author__avatar img {
+    border: 2px solid #05A069;
+   }
+}
+@media (min-width: 961px){
+.sidebar .verfied{
+  display: none !important;
+}
+}
+@media (max-width: 64em){
+.page .page__inner-wrap {
+    float: left;
+    margin-top: 1em;
+    margin-left: 4rem;
+    margin-right: 0;
+    width: 100%;
+    clear: both;
+}
+
+.author__avatar img {
+    max-width: 0px;
+    border-radius: 50%;
+    margin-left: 0px !important;
+}
+.verfied{
+  display: none !important;
+  width: 0px !important;
 }
 }
 </style>
