correct margin issue

--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -41,6 +41,14 @@ author_profile: true
     display: block;
     margin-left: 20px;
 }
+.page .page__inner-wrap {
+    float: left;
+    margin-top: 0em;
+    margin-left: 0;
+    margin-right: 0;
+    width: 100%;
+    clear: both;
+}
 }
 .page__inner-wrap img{
     border: 1px dashed #49b9de;
@@ -76,7 +84,7 @@ author_profile: true
     clear: both;
 }
 .author__avatar img {
-    max-width: 120px !important;
+    max-width: 130px !important;
     border-radius: 50%;
     margin-top: 10px;
     margin-left: 0px !important;
@@ -91,13 +99,13 @@ author_profile: true
 }
 .sidebar.sticky .verified {
     display: inline !important;
-    margin-left: 108px;
+    margin-left: 150px;
 }
 .sidebar.sticky .h-card {
     margin-right: 20px;
 }
 .sidebar.sticky .h-card .author__avatar  {
-    margin-left: 20px;
+    margin-left: 40px;
 }
 }
 </style>
