--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -99,13 +99,20 @@ author_profile: true
 }
 .sidebar.sticky .verified {
     display: inline !important;
-    margin-left: 150px;
+    margin-left: 135px;
 }
 .sidebar.sticky .h-card {
     margin-right: 20px;
 }
 .sidebar.sticky .h-card .author__avatar  {
     margin-left: 40px;
+}
+}
+@media (min-width: 64em){
+.page {
+    float: right;
+    width: calc(100% - 400px);
+    padding-right: 0px;
 }
 }
 </style>
