--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1040,3 +1040,37 @@ blockquote{
   border-radius: 3px;
   padding: 0px 10px 0px 10px; 
 }
+@media screen and (max-width: 64em){
+  .page .page__inner-wrap {
+      float: left;
+      margin-top: 1em;
+      margin-left: 5rem;
+      margin-right: 0;
+      width: 100%;
+      clear: both;
+  }
+  .author__avatar img {
+      max-width: 130px !important;
+      border-radius: 50%;
+      margin-top: 10px;
+      margin-left: 0px !important;
+  }
+  .verified{
+    display: none !important;
+  }
+  }
+  @media screen and (max-width: 64em){
+    .sidebar.sticky {
+      margin-left: 6em !important;
+  }
+  .sidebar.sticky .verified {
+      display: inline !important;
+      margin-left: 135px;
+  }
+  .sidebar.sticky .h-card {
+      margin-right: 20px;
+  }
+  .sidebar.sticky .h-card .author__avatar  {
+      margin-left: 40px;
+  }
+  }
