--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -17,7 +17,14 @@ layout: default
     {% include breadcrumbs.html %}
   {% endunless %}
 {% endif %}
-
+<style>
+  hr {
+    display: block;
+    margin-top: 4em;
+    border: 0;
+    border-top: 1px solid #596060;
+}
+</style>
 <div id="main" role="main">
   {% include sidebar.html %}
 
