--- a/_layouts/twitter_layout.html
+++ b/_layouts/twitter_layout.html
@@ -2,6 +2,23 @@
 layout: archive
 ---
 
+<style>
+  body{
+    background-color: #121b37 !important;
+  }
+  .taxonomy__index a {
+    background-color: #0c2f72;
+    border: 1px dashed #15d38f;
+    border-radius: 3px;
+    padding: 0px 10px 0px 10px;
+}
+.taxonomy__section .archive__subtitle {
+    clear: both;
+    border: 0;
+    color: white;
+}
+</style>
+
 {{ content }}
 
 <ul class="taxonomy__index">
