--- a/_layouts/twitter_layout.html
+++ b/_layouts/twitter_layout.html
@@ -5,7 +5,63 @@ layout: archive
 <style>
   body{
     background-color: #121b37 !important;
+    color: white;
   }
+    /* main strollbar */
+
+/* width */
+::-webkit-scrollbar {
+width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+background: #f1f1f1; 
+border: 1px solid #05A069;
+border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #121b37; 
+border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #172448; 
+}
+
+/* sidebar strollbar */
+
+/* width */
+.sidebar::-webkit-scrollbar {
+width: 5px;
+}
+
+/* Track */
+.sidebar::-webkit-scrollbar-track {
+background: #f1f1f1; 
+}
+.sidebar::-webkit-scrollbar-track {
+border-radius: 10px;
+border: 1px solid #05A069;
+}
+
+/* Handle */
+.sidebar::-webkit-scrollbar-thumb {
+background: #121b37; 
+border-radius: 10px;
+}
+
+/* Handle on hover */
+.sidebar::-webkit-scrollbar-thumb:hover {
+background: #172448; 
+}
+.page__hero--overlay{
+  background-color: #3466ff;
+}
+
   .taxonomy__index a {
     background-color: #0c2f72;
     border: 1px dashed #15d38f;
@@ -16,6 +72,29 @@ layout: archive
     clear: both;
     border: 0;
     color: white;
+}
+.page__footer{
+  background-color: #090f1f !important;
+  border-top: white;
+}
+.side-second-1 button {
+    background-color: #121b37;
+    border: 1px solid #0b2048;
+}
+.side-second-1 button:hover {
+    background-color: #162143;
+}
+.fa-arrow-alt-circle-up {
+    margin-left: 90%;
+    font-size: xx-large;
+    padding: 8px;
+    border: 1px solid #193722aa;
+    background-color: #121b37;
+    border-radius: 6px;
+    position: fixed;
+    bottom: 0;
+    margin-bottom: 30px;
+    box-shadow: 2px 2px 5px #172448;
 }
 </style>
 
