--- a/_layouts/twitter_layout.html
+++ b/_layouts/twitter_layout.html
@@ -68,14 +68,15 @@ background: #172448;
     border-radius: 3px;
     padding: 0px 10px 0px 10px;
 }
+
 .taxonomy__section .archive__subtitle {
     clear: both;
     border: 0;
     color: white;
 }
 .page__footer{
-  background-color: #090f1f !important;
-  border-top: white;
+  background-color: #0c1327 !important;
+  border-top: 1px solid white;
 }
 .side-second-1 button {
     background-color: #121b37;
