--- a/_layouts/twitter_layout.html
+++ b/_layouts/twitter_layout.html
@@ -1,5 +1,6 @@
 ---
 layout: archive
+title: Social Media Page
 ---
 
 <style>
@@ -96,6 +97,9 @@ background: #172448;
     bottom: 0;
     margin-bottom: 30px;
     box-shadow: 2px 2px 5px #172448;
+}
+.no_toc{
+  margin-top: 20px !important;
 }
 </style>
 
