--- a/_layouts/single_tweets.html
+++ b/_layouts/single_tweets.html
@@ -135,6 +135,14 @@ blockquote {
 .page__content a{
     color: #7fa6e1 ;
 }
+
+@media (min-width: 64em){
+.page {
+    float: right;
+    width: calc(100% - 400px);
+    padding-right: 0px;
+}
+}
 </style>
 <div id="main" role="main">
   {% include sidebar.html %}
